add function with different signature to simplify function call